# BlvckWinPipe

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/EchoServer/: CMakeLists.txt  EchoServer.cpp
include/BlvckWinPipe/: Export.h
include/BlvckWinPipe/Platform/: Platform.h
include/BlvckWinPipe/Server/: PipeServer.h
include/BlvckWinPipe/Server/Pipes/: IPipeIoEntity.h  PipeListener.h  PipeSession.h
include/BlvckWinPipe/Utils/: WinHandle.h  WinUtils.h
src/Server/: CMakeLists.txt  PipeServer.cpp
src/Server/Pipes/: CMakeLists.txt  PipeListener.cpp  PipeSession.cpp
tests/: CMakeLists.txt  WinHandleTests.cpp
tests/Server/: CMakeLists.txt
tests/Server/Pipes/: CMakeLists.txt  PipeListenerTestAccess.h  PipeListenerTests.cpp
tests/Utils/: CMakeLists.txt
